# kind2

./: .gitignore  dune-project  dune-workspace  singularity.def
benchgen/: dune  kind2_cr_benchgen.ml  main.ml
examples/: circular.lus  circular2.lus  circular3.lus  circular_counter.lus  circular_nested1.lus  circular_nested1_mod.lus  circular_nested2.lus  counter.lus  dc_motor_control.lus  filter_rt.lus  seq_filter.lus  seq_integ.lus
hd/: README.rst  kind2_cr.opam
hd/benchgen/: dune
hd/docker/: Dockerfile  demo.sh
hd/examples/: asym.lus  circular4.lus  circular_filter.lus  circular_filter_var.lus  circular_filter_var12.lus  circular_filter_var2.lus  circular_filter_var3.lus  circular_filter_var36.lus  dc_motor_control.lus  dc_motor_control_test.lus  gcd.lus  nested.lus  nested1.lus
hd/lib/: dune
hd/tmp/: dune
src/: dune  flags.ml  flags.mli  kind2Flow.ml
src/hd/: compValidator.ml  compValidator.mli  hierarchyDecomposer.ml  hierarchyDecomposer.mli  lustreNodePrinter.ml  lustreNodePrinter.mli  nodeInstance.ml  nodeInstanceToLustre.ml
src/lustre/: lustreExpr.ml
src/utils/: lib.ml  lib.mli
test/: dune
