(lang dune 3.7)

(name kind2_cr)

(generate_opam_files true)

;(source
; (github username/reponame))

(authors "Daisuke Ishii")

;(maintainers "Maintainer Name")

;(license LICENSE)

;(documentation https://url/to/documentation)

;(data_only_dirs kind2_build)

(package
 (name kind2_cr)
 (synopsis "A Kind 2 wrapper")
 (description "A wrapper of Kind 2 that replaces the compositional MC function.")
 (depends ocaml dune) )
